--- a/Public/CSS/Prosjekter.css
+++ b/Public/CSS/Prosjekter.css
@@ -12,11 +12,19 @@ header img{
     width: 20%;
     
 }
+#Portfolio{
+    width: 70%;
+}
 .bildeOgTekst{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+.bildeOgTekst p{
+  font-size: clamp(1em, 2.5vw, 2em);
+  color: var(--SecondaryColor);
+  font-family: var(--Lora);
 }
 .prosjekter{
     display: flex;
@@ -43,6 +51,9 @@ header h1{
     font-family: var(--Lora);
     font-size: clamp(2.5rem, 12.5vw, 6rem);
     line-height: 1.2;
+}
+.bildeOgTekst{
+    max-width: 26vw;
 }
 footer{
     display: flex;
