--- a/Public/CSS/cv.css
+++ b/Public/CSS/cv.css
@@ -45,6 +45,12 @@ header h1{
     display: flex;
     width: 25%;
 }
+#cvBox p{
+    font-size: clamp(1.2em, 1.6vw, 1.5rem);
+    font-family: var(--Lora);
+    color: var(--SecondaryColor);
+    text-align: center;
+}
 h1{
     display: flex;
     justify-content: center;
@@ -55,6 +61,86 @@ h1{
     font-family: var(--Lora);
     padding: 0 1rem;
     color: var(--SecondaryColor);
+    text-align: center;
+}
+h2{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: clamp(2rem, 7vw, 6rem);
+    margin: 1rem 0;
+    font-family: var(--Lora);
+    padding: 0 1rem;
+    color: var(--SecondaryColor);
+    text-align: center;
+}
+h3{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: clamp(2rem, 6vw, 3rem);
+    margin: 1rem 0;
+    font-family: var(--Lora);
+    padding: 0 1rem;
+    color: var(--SecondaryColor);
+    text-align: center;
+}
+h4{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: clamp(1.5rem, 4vw, 2rem);
+    margin: 1rem 0;
+    font-family: var(--Lora);
+    padding: 0 1rem;
+    color: var(--SecondaryColor);
+    text-align: center;
+}
+h6{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: clamp(1.2rem, 3.5vw, 1.8rem);
+    margin: 1rem 0;
+    font-family: var(--Lora);
+    padding: 0 1rem;
+    color: var(--SecondaryColor);
+    text-align: center;
+}
+hr{
+    width: 50%;
+    border: 0.1vw solid var(--SecondaryColor);;
+}
+#underSec{
+  width: 30%;
+    border: 0.1vw solid var(--SecondaryColor);;  
+}
+#underSec2{
+    width: 20%;
+    border: 0.1vw solid var(--SecondaryColor);;  
+}
+ul{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    margin: 1rem 0;
+    font-family: var(--Lora);
+    padding: 0 1rem;
+    color: var(--SecondaryColor);
+    text-align: center;
+    gap: 0.8rem;
+    width: 40%;
+}
+ul li{
+    list-style: none;
+}
+#cvInnhold{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 footer{
     display: flex;
