--- a/Public/CSS/Homepage.css
+++ b/Public/CSS/Homepage.css
@@ -4,6 +4,7 @@ html, body{
     justify-content: center;
     gap: 2em;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 header{
   display: flex;  
@@ -22,7 +23,7 @@ h2{
     display: flex;
     justify-content: center;
     text-align: center;
-    font-size: clamp(3rem, 10vw, 8rem);
+    font-size: clamp(2rem, 7vw, 6rem);
     margin: 1rem 0;
     font-family: var(--Lora);
     padding: 0 1rem;
@@ -30,7 +31,7 @@ h2{
 }
 
 img{
-    width: 23%;
+    width: 20%;
     align-self: center;
 }
 :root{
@@ -64,7 +65,7 @@ footer .footer-btn:hover {
     transform: translateY(-2px) scale(1.04);
 }
 
-@media (max-width: 1070px) {
+@media (max-width: 768px) {
     footer {
         gap: 1em;
         padding: 2em 0.5em;
@@ -74,11 +75,12 @@ footer .footer-btn:hover {
     }
     footer .footer-btn {
         padding: 0.5em 1em;
-        font-size: 3rem;
+        font-size: 1.5rem;
         min-width: 80px;
     }
     img{
         width: 60%;
     }
+
 }
 
